// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin view of Users Table renders error message when no user groups are found 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="empty-response"
      >
        <div
          class="empty-response display-flex flex-column flex-align-start"
        >
          No user groups found
          <button
            class="usa-button styles.createQueryButton margin-bottom-3"
            data-testid="button"
            style="margin-left: 1px; margin-top: 1.5rem; background-color: rgb(0, 94, 162);"
            type="button"
          >
            Create group
          </button>
        </div>
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders content on tab click 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button styles.createQueryButton margin-bottom-3"
        data-testid="button"
        style="margin-left: 1px; background-color: rgb(0, 94, 162);"
        type="button"
      >
        Add user
      </button>
      <div
        class="userPermissionsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Permissions
              </th>
              <th>
                User groups
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Lily 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-456"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-456"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-456"
                  id="role-select-456"
                >
                  <option
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    selected=""
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                <button
                  aria-description="Edit Order of the Phoenix members"
                  class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  Order of the Phoenix
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Harry 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-123"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-123"
                  id="role-select-123"
                >
                  <option
                    selected=""
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                --
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders content on tab click 2`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab__active"
        >
          User groups
        </button>
      </div>
      <div
        class="empty-response"
      >
        <div
          class="empty-response display-flex flex-column flex-align-start"
        >
          No user groups found
          <button
            class="usa-button styles.createQueryButton margin-bottom-3"
            data-testid="button"
            style="margin-left: 1px; margin-top: 1.5rem; background-color: rgb(0, 94, 162);"
            type="button"
          >
            Create group
          </button>
        </div>
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders error message when no users are found 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button styles.createQueryButton margin-bottom-3"
        data-testid="button"
        style="margin-left: 1px; background-color: rgb(0, 94, 162);"
        type="button"
      >
        Add user
      </button>
      <div
        class="empty-response"
      >
        No users found
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders table view after content is loaded 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button styles.createQueryButton margin-bottom-3"
        data-testid="button"
        style="margin-left: 1px; background-color: rgb(0, 94, 162);"
        type="button"
      >
        Add user
      </button>
      <div
        class="userPermissionsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Permissions
              </th>
              <th>
                User groups
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Lily 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-456"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-456"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-456"
                  id="role-select-456"
                >
                  <option
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    selected=""
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                <button
                  aria-description="Edit Order of the Phoenix members"
                  class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  Order of the Phoenix
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Harry 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-123"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-123"
                  id="role-select-123"
                >
                  <option
                    selected=""
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                --
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders table view after content is loaded 2`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button styles.createQueryButton margin-bottom-3"
        data-testid="button"
        style="margin-left: 1px; background-color: rgb(0, 94, 162);"
        type="button"
      >
        Add user
      </button>
      <div
        class="userPermissionsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Permissions
              </th>
              <th>
                User groups
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Lily 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-456"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-456"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-456"
                  id="role-select-456"
                >
                  <option
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    selected=""
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                <button
                  aria-description="Edit Order of the Phoenix members"
                  class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  Order of the Phoenix
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="userDisplay"
                width="270"
              >
                Potter, Harry 
                <div
                  class="actionButtons"
                >
                  <button
                    class="usa-button usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Edit
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
                width="250"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-123"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-123"
                  id="role-select-123"
                >
                  <option
                    selected=""
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td
                width="475"
              >
                --
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div
        class="drawer closed width35"
        data-testid="drawer-open-false"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="userPermissionsTable customizeTableWrapper"
    >
      <table
        class="usa-table usa-table--borderless customizeTable"
        data-testid="table"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Permissions
            </th>
            <th>
              User groups
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="userDisplay"
              width="270"
            >
              Potter, Lily 
              <div
                class="actionButtons"
              >
                <button
                  class="usa-button usa-button--unstyled text-bold text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="icon-text padding-right-4 display-flex flex-align-center"
                  >
                    <svg
                      aria-label="Pencil icon indicating edit ability"
                      class="usa-icon height-3 width-3"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    <span
                      class="padding-left-05"
                      data-testid="edit-group-456"
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </div>
            </td>
            <td
              class="roleDropdown"
              width="250"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-456"
              >
                User role
              </label>
              <select
                class="usa-select"
                data-testid="role-select-456"
                id="role-select-456"
              >
                <option
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  selected=""
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard"
                >
                  Standard
                </option>
              </select>
            </td>
            <td
              width="475"
            >
              <button
                aria-description="Edit Order of the Phoenix members"
                class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                data-testid="button"
                type="button"
              >
                Order of the Phoenix
              </button>
            </td>
          </tr>
          <tr>
            <td
              class="userDisplay"
              width="270"
            >
              Potter, Harry 
              <div
                class="actionButtons"
              >
                <button
                  class="usa-button usa-button--unstyled text-bold text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="icon-text padding-right-4 display-flex flex-align-center"
                  >
                    <svg
                      aria-label="Pencil icon indicating edit ability"
                      class="usa-icon height-3 width-3"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    <span
                      class="padding-left-05"
                      data-testid="edit-group-123"
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </div>
            </td>
            <td
              class="roleDropdown"
              width="250"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-123"
              >
                User role
              </label>
              <select
                class="usa-select"
                data-testid="role-select-123"
                id="role-select-123"
              >
                <option
                  selected=""
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard"
                >
                  Standard
                </option>
              </select>
            </td>
            <td
              width="475"
            >
              --
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
